# simpleprog

./: LICENSE  README.md
gcc14_format_bug/: CMakeLists.txt  README.md  gcc14_format_bug.cpp
install_zscaler_root_certificate/: install_zscaler_root_certificate.ps1  install_zscaler_root_certificate.sh
simplevscode/: CMakeLists.txt  README.md  simplevscode.cpp
simplevscode/amap/: amap.h
simplevscode/aset/: aset.h
smallbinaries/: CMakeLists.txt  README.md  smallbinaries_virtual.cpp
wsl_stats/: format_timer_list.awk  hvsaction2.sh  wsl_interrupt_stats.sh  wsl_perf_stats.2aug2023.ps1  wsl_perf_stats.ps1
